ocp-on-rhv-ci/deploy-grafana/ci-prometheus-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ovirt
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ovirt-prometheus
  name: ovirt-prometheus
  namespace: ovirt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ovirt-prometheus
  template:
    metadata:
      labels:
        app: ovirt-prometheus
    spec:
      containers:
        - image: grafana/grafana:latest
          imagePullPolicy: IfNotPresent
          name: ovirt-grafana
          ports:
          - containerPort: 3000
            protocol: TCP
          volumeMounts:
          - mountPath: /etc/grafana/provisioning/datasources/custom.yaml
            name: grafana
            subPath: prometheus_ds.yaml
          - mountPath: /var/lib/grafana
            name: grafana-pvc

        - image: quay.io/prometheus/prometheus:latest
          imagePullPolicy: IfNotPresent
          name: ovirt-prometheus
          ports:
          - containerPort: 9090
            protocol: TCP
          volumeMounts:
          - mountPath: /prometheus
            name: prom-volume-1
          - mountPath: /etc/prometheus/prometheus.yml
            name: grafana
            subPath: prometheus_config.yaml

          readinessProbe:
            httpGet:
              port: 9090
            timeoutSeconds: 2
      volumes:
      - name: grafana-pvc
        persistentVolumeClaim:
          claimName: grafana-db            
      - name: prom-volume-1
        persistentVolumeClaim:
          claimName: prom-volume      
      - configMap:
          name: grafana
        name: grafana
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ovirt-prometheus
  name: ovirt-prometheus
  namespace: ovirt
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    name: grafana
  - port: 9090
    protocol: TCP
    targetPort: 9090
    name: prometheus

  selector:
    app: ovirt-prometheus
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ovirt-prometheus
  name: prometheus
  namespace: ovirt
spec:
  host: prometheus-ovirt.svc.ci.openshift.org
  port:
    targetPort: prometheus
  to:
    kind: Service
    name: ovirt-prometheus
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ovirt-prometheus
  name: grafana
  namespace: ovirt
spec:
  host: grafana-ovirt.svc.ci.openshift.org
  port:
    targetPort: grafana
  to:
    kind: Service
    name: ovirt-prometheus
    weight: 100
  wildcardPolicy: None
